@@ -1,4 +1,4 @@
-# $NetBSD: GENERIC,v 1.891 2008/04/30 15:29:11 ad Exp $
+# $NetBSD: GENERIC,v 1.892 2008/05/01 20:18:18 cegger Exp $
 #
 # GENERIC machine description file
 #
@@ -22,7 +22,7 @@ include 	"arch/i386/conf/std.i386"
 
 options 	INCLUDE_CONFIG_FILE	# embed config file in kernel binary
 
-#ident 		"GENERIC-$Revision: 1.891 $"
+#ident 		"GENERIC-$Revision: 1.892 $"
 
 maxusers	64		# estimated number of users
 
@@ -360,6 +360,7 @@ asus*		at acpi?		# ASUS hotkeys
 attimer*	at acpi?		# AT Timer
 #com* 		at acpi?		# Serial communications interface
 #fdc* 		at acpi?		# Floppy disk controller
+hpqlb*		at acpi?		# HP Quick Launch Buttons
 hpet* 		at acpi?		# High Precision Event Timer
 joy*		at acpi?		# Joystick/Game port
 #lpt* 		at acpi?		# Parallel port
